--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -5,11 +5,7 @@
 
 <router-outlet></router-outlet>
 
-
-<button  *ngIf="!iterator.isFirst()" (click)="goPrev()">Prev</button>
- 
-  <button *ngIf="!iterator.isDone()" (click)="goNext()">Next</button>  
- 
- 
-  <button *ngIf="iterator.isDone()" (click)="onSubmit()">Submit</button>
+<button  *ngIf="!navigator.isFirst()" (click)="goPrev()">Prev</button>
+<button *ngIf="!navigator.isDone()" (click)="goNext()">Next</button>  
+<button *ngIf="navigator.isDone()" (click)="onSubmit()">Submit</button>
  
