--- a/src/app/shopping-cart/delivery/delivery.component.html
+++ b/src/app/shopping-cart/delivery/delivery.component.html
@@ -1,3 +1,12 @@
 <p>
   delivery works!
 </p>
+
+<div [formGroup]="form">
+  <span *ngFor="let entry of entries">
+   
+    <input type="radio" [value]="entry" name="entry" formControlName="entry" (change)="changed(entry)">
+    <span>{{ entry }}</span>
+</span>
+
+<ev-address [entity]="address"></ev-address>
