fixed navigate and form touch

--- a/src/app/shopping-cart/customization/customization.component.html
+++ b/src/app/shopping-cart/customization/customization.component.html
@@ -1,3 +1,6 @@
 <p>
   customization works!
 </p>
+<div [formGroup]="form">
+   Full Name: <input formControlName="fullname" placeholder="Full Name" >
+</div>
