--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -4,8 +4,10 @@
 <ev-header></ev-header>
 
 <router-outlet></router-outlet>
+<div class="footer" >
+    <button  *ngIf="!navigator.isFirst()" (click)="goPrev()">Prev</button>
+    <button *ngIf="!navigator.isDone()" (click)="goNext()">Next</button>  
+    <button *ngIf="navigator.isDone()" (click)="onSubmit()">Submit</button>
+</div>
 
-<button  *ngIf="!navigator.isFirst()" (click)="goPrev()">Prev</button>
-<button *ngIf="!navigator.isDone()" (click)="goNext()">Next</button>  
-<button *ngIf="navigator.isDone()" (click)="onSubmit()">Submit</button>
  
